Removed unnecessary text

--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,8 @@
             </div>
               <div class="card-content has-background-danger-dark has-text-white-ter has-text-weight-light">      
                 <div class="columns">
-                  <div class="column is-half">Dostępny całodobowo</div>
-                  <div class="column is-half">Wewnątrz budynku: <b>tak</b></div>
+                  <div class="column is-half"></div>
+                  <div class="column is-half"></div>
               </div>      
               </div>
               <div class="card-content">            
