UI changes + new .geojson

--- a/src/index.html
+++ b/src/index.html
@@ -67,15 +67,13 @@
               </div>
             </div>
               <div class="card-content has-background-danger-dark has-text-white-ter has-text-weight-light">      
-                <div class="columns">
-                  <div class="column is-half"></div>
-                  <div class="column is-half"></div>
+                <div class="columns is-vcentered has-text-centered">
+                  <div class="column is-half p-1"></div>
+                  <div class="column is-half p-1"></div>
               </div>      
               </div>
               <div class="card-content">            
                 <div class="content">
-                  <p id="poi-title" class="title is-5 has-text-white-ter"></p>
-                  <p class="subtitle is-6 has-text-white-ter"></p>
                 </div>
               </div>
               <footer class="card-footer">
