--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
             #map { position: absolute; top: 0; bottom: 0; width: 100%; }
             .sidebar {
                 z-index: 1;
-                margin: 1rem !important;
-                width: 425px;
+                margin: 0.5rem !important;
+                width: 435px;
                 border-radius: 10px;
                 box-shadow: 0 .5em 1em -0.125em rgba(10,10,10,0.1),0 0 0 1px rgba(10,10,10,0.02);
                 max-height: 90vh;
@@ -34,20 +34,14 @@
                z-index: 1;
              }
              #sidebar-card-image {
-                height: 80%;
-                width: 100%; 
                 padding-left: 15px;
                 padding-top: 10px;
                 padding-bottom: 10px;
-                word-break: break-word;
+                max-height: 92px;
              }
              .has-background-green
              {
                 background-color: #008954;
-             }
-             .add-new
-             {
-               text-decoration: underline dotted red;
              }
              .card-content
              {
@@ -61,15 +55,15 @@
             <div id="poi-sidebar" class="card">
               <div id="sidebar-header" style="border: 4px solid white;">
                 <button class="delete is-medium is-pulled-right close-button m-3" onclick="hideSidebar()" aria-label="Close button"></button>
-                <div class="columns is-vcentered">
-                  <div class="column is-one-third"><img src="card-image.png" alt="Placeholder image" id="sidebar-card-image" ></div>
+                <div class="columns is-vcentered is-flex p-1">
+                  <div class="column is-one-third is-one-quarter-touch"><img class="image" src="card-image.png" alt="Placeholder image" id="sidebar-card-image" ></div>
                   <div class="column"><p class="title has-text-white has-text-weight-light py-2" id="sidebar-caption"></p></div>
               </div>
             </div>
-              <div class="card-content has-background-danger-dark has-text-white-ter has-text-weight-light">      
+              <div class="card-content px-4 has-background-danger-dark has-text-white-ter">      
                 <div class="columns is-vcentered has-text-centered">
-                  <div class="column is-half p-1"></div>
-                  <div class="column is-half p-1"></div>
+                  <div class="column is-half p-0"></div>
+                  <div class="column is-half p-0"></div>
               </div>      
               </div>
               <div class="card-content">            
@@ -77,7 +71,7 @@
                 </div>
               </div>
               <footer class="card-footer">
-                <a href="https://www.openstreetmap.org/node/9261868500" class="card-footer-item">Uzupełnij obiekt</a>
+                <a href="" class="card-footer-item">Dodaj brakujące informacje</a>
               </footer>
           </div>
         </div>
