--- a/src/index.html
+++ b/src/index.html
@@ -27,65 +27,9 @@
         <meta property="twitter:image" content="meta-image">
         <script src="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.js"></script>
         <link href="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css" rel="stylesheet" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
+        <link rel="stylesheet" href="./nasz.css" />
         <style>
-          html {
-            overflow-y: scroll;
-            overflow-y: hidden;
-
-           }
-            body { margin: 0; padding: 0;}
-            #map { position: absolute; top: 0; bottom: 0; width: 100%;}
-            
-
-             @media (min-width: 500px) {
-              .sidebar  {
-                z-index: 1;
-                margin: 0.5rem !important;
-                width: 408px;
-                border-radius: 10px;
-                box-shadow: 0 .5em 1em -0.125em rgba(10,10,10,0.1),0 0 0 1px rgba(10,10,10,0.02);
-                max-height: 90vh;
-              }
-            }
-             @media (max-width: 500px) {
-              .sidebar  {
-                  margin: 0 !important;
-                  width: 100vw;
-                  display: block !important;
-                  overflow: auto !important;
-                  overflow-wrap: break-word;
-                  max-height: 90vh;
-                  z-index: 1002 !important;
-              }
-            }
-             .card
-             {
-               z-index: 1;
-             }
-             #sidebar-card-image {
-                padding-left: 15px;
-                padding-top: 10px;
-                padding-bottom: 10px;
-                max-height: 94px;
-             }
-             #sidebar-header
-             {
-              border: 4px solid hsl(0, 0%, 96%);
-             }
-             .has-background-green
-             {
-              background-color: #008954eb;
-             }
-             .card-content
-             {
-               border-left: 5px solid hsl(0, 0%, 96%);
-               border-right: 5px solid hsl(0, 0%, 96%);
-             }
-             .navbar
-             {
-              border-bottom: 1px solid hsl(0, 0%, 96%);
-             }
 
         </style>
         </head>
