added more info to card footer

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
     <head>
        <title>AED - mapa defibrylatorów</title>
        <meta charset="utf-8" />
@@ -64,8 +64,14 @@
                 <div class="content">
                 </div>
               </div>
+                <hr class="my-1"/>
+                <div class="card-content py-1">
+                    <span class="has-text-grey-light is-size-7">Dane z OpenStreetMap - odświeżane co ok. godzinę</span>
+                </div>
               <footer class="card-footer">
-                <a href="" class="card-footer-item ">Dodaj brakujące informacje</a>
+                <a href="" class="card-footer-item" target="_blank" rel="noopener" >Dodaj brakujące informacje</a>
+                <a href="https://wiki.openstreetmap.org/wiki/Pl:Przewodnik_dla_pocz%C4%85tkuj%C4%85cych"
+                   class="card-footer-item" target="_blank" rel="noopener" >Przewodnik OSM</a>
               </footer>
           </div>
         </div>
