minor ui changes (link color, sidebar buttons)

--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
         <meta property="og:url" content="https://aed.openstreetmap.org.pl">
         <meta property="og:title" content="AED - mapa defibrylatorów">
         <meta property="og:description" content="Mapa defibrylatorów AED w Polsce oparta o dane OpenStreetMap">
-        <meta property="og:image" content="./meta-image.png">
+        <meta property="og:image" content="https://aed.openstreetmap.org.pl/dev/meta-image.png">
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://aed.openstreetmap.org.pl">
         <meta property="twitter:title" content="AED - mapa defibrylatorów">
         <meta property="twitter:description" content="Mapa defibrylatorów AED w Polsce oparta o dane OpenStreetMap">
-        <meta property="twitter:image" content="./meta-image.png">
+        <meta property="twitter:image" content="https://aed.openstreetmap.org.pl/dev/meta-image.png">
         <script src="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.js"></script>
         <link href="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
@@ -40,7 +40,7 @@
               
               <span class="has-text-success-light has-text-weight-light navbar-item is-size-6 is-size-7-touch">
                 <span class="has-text-grey-light">|</span>&nbsp;&nbsp;tworzona z ❤️ przez&nbsp;
-                <span class="has-text-weight-medium"> OpenStreetMap Polska</span>
+                <span class="has-text-weight-medium"> <a href="https://openstreetmap.org.pl/" target="_blank" rel="noopener" style="color:#effaf5;">OpenStreetMap Polska</a></span>
               </span>
               <a role="button" class="navbar-burger has-text-white-ter" aria-label="menu" aria-expanded="false">
                 <span aria-hidden="true"></span>
@@ -62,14 +62,14 @@
                 <div class="content">
                 </div>
               </div>
-                <hr class="my-1"/>
-                <div class="card-content py-1">
-                    <span class="has-text-grey-light is-size-7">Dane z OpenStreetMap - odświeżane co ok. godzinę</span>
+                <hr class="my-1" />
+                <div class="card-content py-1 has-text-right ">
+                    <span class="has-text-grey is-size-7 has-text-weight-light">Dane z OpenStreetMap - odświeżane co ok. godzinę</span>
                 </div>
               <footer class="card-footer">
-                <a href="" class="card-footer-item" target="_blank" rel="noopener" >Dodaj brakujące informacje</a>
+                <a href="" class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold" target="_blank" rel="noopener" >Dodaj brakujące informacje</a>
                 <a href="https://wiki.openstreetmap.org/wiki/Pl:Przewodnik_dla_pocz%C4%85tkuj%C4%85cych"
-                   class="card-footer-item" target="_blank" rel="noopener" >Przewodnik OSM</a>
+                   class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold" target="_blank" rel="noopener" >Przewodnik OSM</a>
               </footer>
           </div>
         </div>
