changed meta urls to prod version

--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
         <meta property="og:url" content="https://aed.openstreetmap.org.pl">
         <meta property="og:title" content="AED - mapa defibrylatorów">
         <meta property="og:description" content="Mapa defibrylatorów AED w Polsce oparta o dane OpenStreetMap">
-        <meta property="og:image" content="https://aed.openstreetmap.org.pl/dev/meta-image.png">
+        <meta property="og:image" content="https://aed.openstreetmap.org.pl/meta-image.png">
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://aed.openstreetmap.org.pl">
         <meta property="twitter:title" content="AED - mapa defibrylatorów">
         <meta property="twitter:description" content="Mapa defibrylatorów AED w Polsce oparta o dane OpenStreetMap">
-        <meta property="twitter:image" content="https://aed.openstreetmap.org.pl/dev/meta-image.png">
+        <meta property="twitter:image" content="https://aed.openstreetmap.org.pl/meta-image.png">
         <script src="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.js"></script>
         <link href="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
