index.html to root + smaller marker icon (no border)

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
        <meta name="title" content="AED - mapa defibrylatorów">
        <meta name="description" content="Mapa defibrylatorów AED w Polsce oparta o dane OpenStreetMap"> 
         <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-        <link rel="manifest" href="favicon/site.webmanifest">
-        <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
-        <link rel="shortcut icon" href="favicon/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="src/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./src/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./src/favicon/favicon-16x16.png">
+        <link rel="manifest" href="./src/favicon/site.webmanifest">
+        <link rel="mask-icon" href="./src/favicon/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut icon" href="./src/favicon/favicon.ico">
         <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="msapplication-config" content="favicon/browserconfig.xml">
+        <meta name="msapplication-config" content="src/favicon/browserconfig.xml">
         <meta name="theme-color" content="#dbdbdb">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://aed.openstreetmap.org.pl">
@@ -29,7 +29,7 @@
         <script src="https://openingh.openstreetmap.de/opening_hours.js/opening_hours+deps.min.js" defer></script>
         <link href="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
-        <link rel="stylesheet" href="./nasz.css" />
+        <link rel="stylesheet" href="./src/nasz.css" />
 
         </head>
         <body>
@@ -55,7 +55,7 @@
               <div id="sidebar-header">
                 <button class="delete is-medium is-pulled-right close-button m-3" onclick="hideSidebar()" aria-label="Close button"></button>
                 <div class="columns is-vcentered is-flex p-1">
-                  <div class="column is-one-quarter is-one-fifth-mobile "><img class="image" src="card-image.png" alt="Placeholder image" id="sidebar-card-image" ></div>
+                  <div class="column is-one-quarter is-one-fifth-mobile "><img class="image" src="./src/card-image.png" alt="Placeholder image" id="sidebar-card-image" ></div>
                   <div class="column"><p class="title has-text-white has-text-weight-light py-2" id="sidebar-caption"></p></div>
               </div>
             </div>
@@ -77,6 +77,6 @@
 
         <div id="map"></div>
 
-            <script src="./map.js"></script>
+            <script src="./src/map.js"></script>
         </body>
 </html>
