change of link to og:image

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <meta property="og:url" content="https://aed.openstreetmap.org.pl">
         <meta property="og:title" content="AED - mapa defibrylatorów">
         <meta property="og:description" content="Mapa defibrylatorów AED w Polsce oparta o dane OpenStreetMap">
-        <meta property="og:image" content="https://aed.openstreetmap.org.pl/meta-image.png">
+        <meta property="og:image" content="https://openstreetmap-polska.github.io/meta-image.png">
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://aed.openstreetmap.org.pl">
         <meta property="twitter:title" content="AED - mapa defibrylatorów">
         <meta property="twitter:description" content="Mapa defibrylatorów AED w Polsce oparta o dane OpenStreetMap">
-        <meta property="twitter:image" content="https://aed.openstreetmap.org.pl/meta-image.png">
+        <meta property="twitter:image" content="https://openstreetmap-polska.github.io/meta-image.png">
         <script src="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.js"></script>
         <script src="https://openingh.openstreetmap.de/opening_hours.js/opening_hours+deps.min.js" defer></script>
         <link href="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css" rel="stylesheet" />
