moved images to /img, added github link

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
         <link rel="mask-icon" href="./src/favicon/safari-pinned-tab.svg" color="#5bbad5">
         <link rel="shortcut icon" href="./src/favicon/favicon.ico">
         <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="msapplication-config" content="src/favicon/browserconfig.xml">
+        <meta name="msapplication-config" content="./src/favicon/browserconfig.xml">
         <meta name="theme-color" content="#dbdbdb">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://aed.openstreetmap.org.pl">
         <meta property="og:title" content="AED - mapa defibrylatorów">
         <meta property="og:description" content="Mapa defibrylatorów AED w Polsce oparta o dane OpenStreetMap">
-        <meta property="og:image" content="https://openstreetmap-polska.github.io/aed-mapa/src/meta-image.png">
+        <meta property="og:image" content="https://openstreetmap-polska.github.io/aed-mapa/src/img/meta-image.png">
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://aed.openstreetmap.org.pl">
         <meta property="twitter:title" content="AED - mapa defibrylatorów">
         <meta property="twitter:description" content="Mapa defibrylatorów AED w Polsce oparta o dane OpenStreetMap">
-        <meta property="twitter:image" content="https://openstreetmap-polska.github.io/aed-mapa/src/meta-image.png">
+        <meta property="twitter:image" content="https://openstreetmap-polska.github.io/aed-mapa/src/img/meta-image.png">
         <script src="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.js"></script>
         <script src="https://openingh.openstreetmap.de/opening_hours.js/opening_hours+deps.min.js" defer></script>
         <link href="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css" rel="stylesheet" />
@@ -38,16 +38,22 @@
               <a class="has-text-weight-medium navbar-item has-text-white-ter is-size-4 is-size-5-mobile" href="#">
                 Mapa AED
               </a>
-              
               <span class="has-text-success-light has-text-weight-light navbar-item is-size-6 is-size-7-touch">
                 <span class="has-text-grey-light">|</span>&nbsp;&nbsp;tworzona z ❤️ przez&nbsp;
                 <span class="has-text-weight-medium"> <a href="https://openstreetmap.org.pl/" target="_blank" rel="noopener" style="color:#effaf5;">OpenStreetMap Polska</a></span>
               </span>
-              <a role="button" class="navbar-burger has-text-white-ter" aria-label="menu" aria-expanded="false">
+              <a role="button" class="navbar-burger has-text-white-ter is-transparent" data-target="navMenu" aria-label="menu" aria-expanded="false">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
               </a>
+            </div>
+
+            <div id="navMenu" class="navbar-menu">
+            <div class="navbar-end">
+              <div class="navbar-item">
+                <a href="https://github.com/openstreetmap-polska/aed-mapa" target="_blank" rel="noopener"><img class="github" src="./src/img/github-image.png" alt="Github" width="24" height="24"></a>
+              </div>
             </div>
           </nav>
           <div class="sidebar is-invisible">
@@ -55,8 +61,8 @@
               <div id="sidebar-header">
                 <button class="delete is-medium is-pulled-right close-button m-3" onclick="hideSidebar()" aria-label="Close button"></button>
                 <div class="columns is-vcentered is-flex p-1">
-                  <div class="column is-one-quarter is-one-fifth-mobile "><img class="image" src="./src/card-image.png" alt="Placeholder image" id="sidebar-card-image" ></div>
-                  <div class="column"><p class="title has-text-white has-text-weight-light py-2" id="sidebar-caption"></p></div>
+                  <div class="column is-one-quarter is-one-fifth-mobile "><img class="image" src="./src/img/card-image.png" alt="Placeholder image" id="sidebar-card-image" ></div>
+                  <div class="column"><p class="title has-text-white-ter has-text-weight-light py-2" id="sidebar-caption"></p></div>
               </div>
             </div>
               <div class="card-content">            
@@ -76,7 +82,6 @@
         </div>
 
         <div id="map"></div>
-
             <script src="./src/map.js"></script>
         </body>
 </html>
