Added aed counter to navbar

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 Mapa AED
               </a>
               <span class="has-text-success-light has-text-weight-light navbar-item is-size-6 is-size-7-touch">
-                <span class="has-text-grey-light">|</span>&nbsp;&nbsp;tworzona z ❤️ przez&nbsp;
-                <span class="has-text-weight-medium"> <a href="https://openstreetmap.org.pl/" target="_blank" rel="noopener" style="color:#effaf5;">OpenStreetMap Polska</a></span>
+                <span class="has-text-grey-light mr-2">|</span>tworzona z ❤️ przez&nbsp;
+                <span class="has-text-weight-medium"> <a href="https://openstreetmap.org.pl/" target="_blank" title="Odwiedź stronę polskiej społeczności OSM" rel="noopener" style="color:#effaf5;">OpenStreetMap Polska</a></span>
               </span>
               <a role="button" class="navbar-burger has-text-white-ter is-transparent" data-target="navMenu" aria-label="menu" aria-expanded="false">
                 <span aria-hidden="true"></span>
@@ -52,7 +52,13 @@
             <div id="navMenu" class="navbar-menu">
             <div class="navbar-end">
               <div class="navbar-item">
-                <a href="https://github.com/openstreetmap-polska/aed-mapa" target="_blank" rel="noopener"><img class="github" src="./src/img/github-image.png" alt="Github" width="24" height="24"></a>
+                <span class="has-text-white has-text-weight-light mr-1">dodaliśmy do mapy już ⚡ </span>
+                <span class="has-text-white-ter is-size-5 has-text-weight-semibold" id="aed-number"></span>
+                <span class="has-text-white has-text-weight-light ml-1">AED</span>
+              </div>
+              <div class="navbar-item">
+                <a href="https://github.com/openstreetmap-polska/aed-mapa" target="_blank" rel="noopener">
+                  <img title="Odwiedź nasz Github" class="github" src="./src/img/github-image.png" alt="Github" width="24" height="24"></a>
               </div>
             </div>
           </nav>
