--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
         </div>
 
         <div id="map"></div>
-            <script src="./src/map.js"></script>
+        <script src="./src/map.js"></script>
+
+        <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "117bf6ce871a40ac9bf5a7330f8538eb"}'></script><!-- End Cloudflare Web Analytics -->
         </body>
 </html>
