fixed urls and added id to element indicating refresh frequency

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <meta property="og:url" content="https://aed.openstreetmap.org.pl">
         <meta property="og:title" content="AED - mapa defibrylatorów">
         <meta property="og:description" content="Mapa defibrylatorów AED w Polsce oparta o dane OpenStreetMap">
-        <meta property="og:image" content="https://openstreetmap-polska.github.io/aed-mapa/src/img/meta-image.png">
+        <meta property="og:image" content="https://aed.openstreetmap.org.pl/src/img/meta-image.png">
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://aed.openstreetmap.org.pl">
         <meta property="twitter:title" content="AED - mapa defibrylatorów">
         <meta property="twitter:description" content="Mapa defibrylatorów AED w Polsce oparta o dane OpenStreetMap">
-        <meta property="twitter:image" content="https://openstreetmap-polska.github.io/aed-mapa/src/img/meta-image.png">
+        <meta property="twitter:image" content="https://aed.openstreetmap.org.pl/src/img/meta-image.png">
         <script src="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.js"></script>
         <script src="https://openingh.openstreetmap.de/opening_hours.js/opening_hours+deps.min.js" defer></script>
         <link href="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css" rel="stylesheet" />
@@ -77,7 +77,7 @@
               </div>
                 <hr class="my-1" />
                 <div class="card-content py-1 has-text-right ">
-                    <span class="has-text-grey is-size-7 has-text-weight-light">Dane z OpenStreetMap - odświeżane co ok. godzinę</span>
+                    <span id="refresh-time" class="has-text-grey is-size-7 has-text-weight-light">Dane z OpenStreetMap - odświeżane co ok. godzinę</span>
                 </div>
               <footer class="card-footer">
                 <a href="" class="has-background-success-light card-footer-item has-text-centered is-size-7 has-text-weight-semibold" target="_blank" rel="noopener" >Dodaj brakujące informacje</a>
