number of elements from metadata

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                   <img title="Odwiedź nasz Github" class="github" src="./src/img/github-image.png" alt="Github" width="24" height="24"></a>
               </div>
             </div>
+          </div>
           </nav>
           <div class="sidebar is-invisible">
             <div id="poi-sidebar" class="card">
