--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <body>
           <nav class="navbar has-background-green p-1 has-shadow" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-              <a class="has-text-weight-medium navbar-item has-text-white-ter is-size-4 is-size-5-mobile" href="#">
-                Mapa AED
+              <a class="has-text-weight-light navbar-item has-text-white-ter is-size-4 is-size-5-mobile" href="#">
+                Mapa <span class="has-text-weight-semibold pl-1">AED</span>
               </a>
               <span class="has-text-success-light has-text-weight-light navbar-item is-size-6 is-size-7-touch">
                 <span class="has-text-grey-light mr-2">|</span>tworzona z ❤️ przez&nbsp;
@@ -52,11 +52,11 @@
             <div id="navMenu" class="navbar-menu">
             <div class="navbar-end">
               <div class="navbar-item">
-                <span class="has-text-white has-text-weight-light mr-1">dodaliśmy do mapy już ⚡ </span>
+                <span class="has-text-white has-text-weight-light mr-1">dodaliśmy do mapy już ⚡</span>
                 <span class="has-text-white-ter is-size-5 has-text-weight-semibold" id="aed-number"></span>
                 <span class="has-text-white has-text-weight-light ml-1">AED</span>
               </div>
-              <div class="navbar-item">
+              <div class="navbar-item pb-0">
                 <a href="https://github.com/openstreetmap-polska/aed-mapa" target="_blank" rel="noopener">
                   <img title="Odwiedź nasz Github" class="github" src="./src/img/github-image.png" alt="Github" width="24" height="24"></a>
               </div>
