UI padding fix + metadata to gitignore

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           <nav class="navbar has-background-green p-1 has-shadow" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
               <a class="has-text-weight-light navbar-item has-text-white-ter is-size-4 is-size-5-mobile" href="#">
-                Mapa <span class="has-text-weight-semibold pl-1">AED</span>
+                Mapa <span class="has-text-weight-semibold pl-1 r-1">AED</span>
               </a>
-              <span class="has-text-success-light has-text-weight-light navbar-item is-size-6 is-size-7-touch">
+              <span class="has-text-success-light has-text-weight-light navbar-item is-size-6 is-size-7-touch pl-0">
                 <span class="has-text-grey-light mr-2">|</span>tworzona z ❤️ przez&nbsp;
                 <span class="has-text-weight-medium"> <a href="https://openstreetmap.org.pl/" target="_blank" title="Odwiedź stronę polskiej społeczności OSM" rel="noopener" style="color:#effaf5;">OpenStreetMap Polska</a></span>
               </span>
